[package]
name = "lc"
version = "0.4.0"
edition = "2021"
authors = ["Linus Ziegler"]

about = "A small program for counting lines. \n"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.20", features = ["derive"] }
thiserror = "1.0.33"
